News UAT/force-app/main/default/objects/Opportunity/fields/Acct_Plan__c.field-meta.xml
<CustomField>
    <fullName>Acct_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to connect Opportunity to Account Plan</description>
    <label>Acct Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>