News UAT/force-app/main/default/objects/Opportunity/fields/ADM_ASM_Referral__c.field-meta.xml
<CustomField>
    <fullName>ADM_ASM_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this checkbox if this opportunity has been referred to an ASM from an ADM or to an ADM from an ASM</inlineHelpText>
    <label>ADM/ASM Referral</label>
    <type>Checkbox</type>
</CustomField>