News UAT/force-app/main/default/objects/Opportunity/fields/Approved_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Approved_Sales_Order_Number__c</fullName>
    <inlineHelpText>Number of Approved Sales Order</inlineHelpText>
    <label>Approved Sales Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>