News UAT/force-app/main/default/objects/Opportunity/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <inlineHelpText>Where has the brief stemmed from?</inlineHelpText>
    <label>Background</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>