News UAT/force-app/main/default/objects/Opportunity/fields/Briefing_Form__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Briefing Form</label>
    <referenceTo>Briefing_Form__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>