News UAT/force-app/main/default/objects/Opportunity/fields/BypassContactValidation__c.field-meta.xml
<CustomField>
    <fullName>BypassContactValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2017-05-22 Item-00282 - This flag will be used by SalesOrder trigger to bypass validation rule that requires Contact to be conditionally mandatory.</description>
    <label>Bypass Contact Validation</label>
    <type>Checkbox</type>
</CustomField>