News UAT/force-app/main/default/objects/Opportunity/fields/Campaign_Brief_Archived__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Brief_Archived__c</fullName>
    <description>Export the archived Campaign Brief</description>
    <formula>IF( AND(Briefing_Form__c != null,  Briefing_Form__r.Status__c == &#39;Completed&#39;), 
HYPERLINK(&#39;/apex/CS_ExportBriefingFormAsPDF?bfId=&#39; + Briefing_Form__c + &#39;&amp;oppId=&#39; + Id , &#39;click here to export&#39; ), 
&#39;&#39;)</formula>
    <inlineHelpText>Export the archived Campaign Brief</inlineHelpText>
    <label>Campaign Brief Archived</label>
    <type>Text</type>
</CustomField>