News UAT/force-app/main/default/objects/Opportunity/fields/Campaign_Brief_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Brief_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the all the required fields in the Campaign Brief Form have been filled</description>
    <inlineHelpText>Indicate if the all the required fields in the Campaign Brief Form have been filled</inlineHelpText>
    <label>Campaign Brief Form Completed</label>
    <type>Checkbox</type>
</CustomField>