News UAT/force-app/main/default/objects/Opportunity/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <label>Advertising Start Date</label>
    <type>Date</type>
</CustomField>