News UAT/force-app/main/default/objects/Opportunity/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <description>Campaign Status</description>
    <inlineHelpText>Campaign Status</inlineHelpText>
    <label>Campaign Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>