News UAT/force-app/main/default/objects/Opportunity/fields/Case_Origin_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_Id__c</fullName>
    <description>The Case Id from which the opportunity originated from. Populated and used when a user creates a new opportunity from a Case record with the record type &#39;Referral&#39;. Created for JIRA Item SFE-498.</description>
    <label>Case Origin Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>