News UAT/force-app/main/default/objects/Opportunity/fields/ClientPOReference__c.field-meta.xml
<CustomField>
    <fullName>ClientPOReference__c</fullName>
    <inlineHelpText>Enter the customer&#39;s Purchase Order Reference, if applicable.</inlineHelpText>
    <label>Client PO Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>