News UAT/force-app/main/default/objects/Opportunity/fields/Close_Date_Past__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Past__c</fullName>
    <formula>CloseDate  &lt;=  TODAY()</formula>
    <label>Close Date Past</label>
    <type>Checkbox</type>
</CustomField>