News UAT/force-app/main/default/objects/Opportunity/fields/CloseMonth__c.field-meta.xml
<CustomField>
    <fullName>CloseMonth__c</fullName>
    <formula>MONTH(CloseDate)</formula>
    <inlineHelpText>Used for YrOnYr reporting. Do not display on page.</inlineHelpText>
    <label>CloseMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>