News UAT/force-app/main/default/objects/Opportunity/fields/Closure_Summary__c.field-meta.xml
<CustomField>
    <fullName>Closure_Summary__c</fullName>
    <label>Closure Summary</label>
    <type>TextArea</type>
</CustomField>