News UAT/force-app/main/default/objects/Opportunity/fields/CNG_Sales_Representitive__c.field-meta.xml
<CustomField>
    <fullName>CNG_Sales_Representitive__c</fullName>
    <inlineHelpText>Please enter the name of the CNG Sales Representative who made the sale</inlineHelpText>
    <label>CNG Sales Representitive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>