News UAT/force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B Mag</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Letterbox</fullName>
            </value>
            <value>
                <fullName>Magazines - Bauer</fullName>
            </value>
            <value>
                <fullName>Magazines - EMAP</fullName>
            </value>
            <value>
                <fullName>Magazines - Fairfax Magazines</fullName>
            </value>
            <value>
                <fullName>Magazines - Other</fullName>
            </value>
            <value>
                <fullName>Magazines – Pacific Magazines</fullName>
            </value>
            <value>
                <fullName>Map Magazine</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Online - Fairfax Digital</fullName>
            </value>
            <value>
                <fullName>Online - News Digital Media</fullName>
            </value>
            <value>
                <fullName>Online - NineMSN</fullName>
            </value>
            <value>
                <fullName>Online - Other</fullName>
            </value>
            <value>
                <fullName>Online - Sensis</fullName>
            </value>
            <value>
                <fullName>Online - Yahoo</fullName>
            </value>
            <value>
                <fullName>Outdoor - APN</fullName>
            </value>
            <value>
                <fullName>Outdoor - Adshel</fullName>
            </value>
            <value>
                <fullName>Outdoor - Australia Outdoor Network</fullName>
            </value>
            <value>
                <fullName>Outdoor - Eyecorp</fullName>
            </value>
            <value>
                <fullName>Press - APN</fullName>
            </value>
            <value>
                <fullName>Press - Fairfax Community</fullName>
            </value>
            <value>
                <fullName>Press - Fairfax Metro</fullName>
            </value>
            <value>
                <fullName>Press - News Communitities</fullName>
            </value>
            <value>
                <fullName>Press - News Metro</fullName>
            </value>
            <value>
                <fullName>Press - Other</fullName>
            </value>
            <value>
                <fullName>Press - Trading Post</fullName>
            </value>
            <value>
                <fullName>Press - Yellow Pages</fullName>
            </value>
            <value>
                <fullName>Radio - Austereo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>