News UAT/force-app/main/default/objects/Opportunity/fields/Created_By_Briefing_Form__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Briefing_Form__c</fullName>
    <formula>Briefing_Form__r.CreatedBy.FirstName + &#39; &#39; + Briefing_Form__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created</label>
    <type>Text</type>
</CustomField>