News UAT/force-app/main/default/objects/Opportunity/fields/Creative_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Creative_Services_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creative Services Required</label>
    <type>Checkbox</type>
</CustomField>