News UAT/force-app/main/default/objects/Opportunity/fields/CSCAP__Authoriser_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CSCAP__Authoriser_Email_Address__c</fullName>
    <label>Authoriser Email Address</label>
    <type>Email</type>
</CustomField>