News UAT/force-app/main/default/objects/Opportunity/fields/CSCAP__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>CSCAP__PO_Number__c</fullName>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>