News UAT/force-app/main/default/objects/Opportunity/fields/CSCAP__VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>CSCAP__VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>