News UAT/force-app/main/default/objects/Opportunity/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <label>Current Position</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>