News UAT/force-app/main/default/objects/Opportunity/fields/Digital_Budget__c.field-meta.xml
<CustomField>
    <fullName>Digital_Budget__c</fullName>
    <label>Production Digital Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>