News UAT/force-app/main/default/objects/Opportunity/fields/Earned__c.field-meta.xml
<CustomField>
    <fullName>Earned__c</fullName>
    <inlineHelpText>Social/PR Gained</inlineHelpText>
    <label>Media - Earned</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>