News UAT/force-app/main/default/objects/Opportunity/fields/Goto_Action_Plan_Url__c.field-meta.xml
<CustomField>
    <fullName>Goto_Action_Plan_Url__c</fullName>
    <description>2015-07 NewsXtend</description>
    <formula>HYPERLINK(&#39;/apex/NewsXtend_CreateActionPlan?Id=&#39; + Id, &#39;Goto Action Plan&#39;)</formula>
    <label>NewsXtend Action Plan</label>
    <type>Text</type>
</CustomField>