News UAT/force-app/main/default/objects/Opportunity/fields/Is_Campaign_Start_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Campaign_Start_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Advertising Start Date Changed?</label>
    <type>Checkbox</type>
</CustomField>