News UAT/force-app/main/default/objects/Opportunity/fields/Is_Scheduled_before_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Scheduled_before_Closed__c</fullName>
    <formula>IF (Schedule_Date_Earliest__c &lt; CloseDate, TRUE, FALSE)</formula>
    <inlineHelpText>Checks if any revenue are scheduled prior to the opportunity close date.</inlineHelpText>
    <label>Is Scheduled before Closed?</label>
    <type>Checkbox</type>
</CustomField>