News UAT/force-app/main/default/objects/Opportunity/fields/Joint_Response__c.field-meta.xml
<CustomField>
    <fullName>Joint_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a joint response with a third party or other News Corp division?</inlineHelpText>
    <label>Joint Response</label>
    <type>Checkbox</type>
</CustomField>