News UAT/force-app/main/default/objects/Opportunity/fields/Last_Modified_via_Salesforce1__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_via_Salesforce1__c</fullName>
    <description>Used to track when records are modified via Salesforce1</description>
    <label>Last Modified via Salesforce1</label>
    <type>DateTime</type>
</CustomField>