News UAT/force-app/main/default/objects/Opportunity/fields/Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion__c</fullName>
    <label>Lead Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>