News UAT/force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail_frml__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_frml__c</fullName>
    <formula>Contact__r.Lead_Source_Detail__c</formula>
    <inlineHelpText>From the Contact</inlineHelpText>
    <label>Lead Source Detail</label>
    <type>Text</type>
</CustomField>