News UAT/force-app/main/default/objects/Opportunity/fields/Linked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Linked_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities_ChildOpty</relationshipLabel>
    <relationshipName>Opportunities_ChildOpty</relationshipName>
    <type>Lookup</type>
</CustomField>