News UAT/force-app/main/default/objects/Opportunity/fields/Linked_Opty_ID__c.field-meta.xml
<CustomField>
    <fullName>Linked_Opty_ID__c</fullName>
    <formula>Linked_Opportunity__r.Opty_SFDC_ID__c</formula>
    <label>Linked Opty ID</label>
    <type>Text</type>
</CustomField>