News UAT/force-app/main/default/objects/Opportunity/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this Opportunity meet the criteria to add the related account to the loyalty program</inlineHelpText>
    <label>Is Loyalty Program Opportunity</label>
    <type>Checkbox</type>
</CustomField>