News UAT/force-app/main/default/objects/Opportunity/fields/Loyalty_Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_End_Date__c</fullName>
    <label>Loyalty Program End Date</label>
    <type>Date</type>
</CustomField>